--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,14 +1,15 @@
 version: "3"
 
 services:
-  node:
+  sql:
     ports:
-      - 8080:3000
+      - 1433:1433
     networks:
-      - webnet
-    build:
-      context: ./
-      dockerfile: Dockerfile
+      - sqlnet
+    image: mcr.microsoft.com/mssql/server:2019-latest
+    environment:
+      - ACCEPT_EULA=Y
+      - SA_PASSWORD=yourStrong(!)Password
 
 networks:
-  webnet:
+  sqlnet:
